--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Efficient Manual Milking Machines</h1>
+            <h1>Efficient Manual Milking Machines Manufacturer</h1>
             <p>Revolutionize your dairy farming with our compact, scalable, and economical manual milking machines. Designed for small to medium dairy farms with 1-year warranty and 50% off on service.</p>
             <a href="#products" class="cta-button">View Products</a>
         </div>
